--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 NEXT_PUBLIC_GOOGLE_GEMINI_API_KEY=AIzaSyCO4ffceXxkVYx9KwVwaFSWKvGLOdGITkM
 
+NEXT_PUBLIC_DRIZZLE_DB_URL=postgresql://portfolio_manager_owner:PR4Uvg5erzLp@ep-polished-cake-a5zi2gww.us-east-2.aws.neon.tech/Ai-content-generator?sslmode=require 
