--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "push": "drizzle-kit push",
+    "studio": "drizzle-kit studio",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
     "@google/generative-ai": "^0.14.0",
+    "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/react-editor": "^3.2.3",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
     "lucide-react": "^0.399.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
@@ -29,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.22.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
